* Fixed cache bugs in headline view.
* Fixed bug with addresses.
* Improved MySQL 4 support in eZ trade.
* Added missing SQL queries for permission system.
* Removed link to Entry/exit pages report in eZ stats.
* Fixed security bug with variable check in messagebody in eZ forum.
* Fixed security bug with variable check in search in eZ filemanager.
* improved class eZHit in eZ link.

Changes from 2.2.7 to 2.2.8
---------------------------
* Fixed rendering of nexted tables.
* Fixed problem with search in forum admin interface.
* Added menufilelist for listing files from a folder in the filemanager in the frame.php
* Fixed bug when adding/editing ads in "Section edit" if no productcategories 
  exist in eZ trade.
* Fixed cache bug in eZTrade (productlist)
* Made keywords available in articleview.tpl and as a variable which can be used in frame.php
* Fixed bug in todolist.
* Added rollovertag.
* Fixed bug with mail tag.
* Added up / down arrows for images to an article.
* Fixed bug with dayview in eZ stats.
* Fixed bug with attribute list in eZ article.
* Added indexes in eZStat. This resolves performance problems with cron.php
* XMLRPC: Made sure the article cache is deleted when an article or article category is deleted.
* Fixed bug with permissions in filedownload for eZ filemanager.
* Fixed bug in eZ link. The function id() apeared twice.
* Fixed bug in eZ form. Language was not set to the template, when sending a form.
* Fixed security bug in articleheaderlist with the variable CategoryID.
* Fixed permissions in eZ article (articleuncached).
* Fixed permission bug with upload of files in eZ imagecatalogue.
* Fixed bug with time publishing of articles (in categories with editor)
* Large speed improvements in the article module (large cut-down in sql queries)
* Speed improvements in module handler
* Fixed security bug with Java script in search

Changes from 2.2.6 to 2.2.7
---------------------------