@@ -161,9 +161,9 @@ else
 <!--
     <div align="center">
         <?
-        $CategoryID = 4;
-        $Limit = 1; 
-        include( "ezad/user/adlist.php" );
+//        $CategoryID = 4;
+//        $Limit = 1; 
+//        include( "ezad/user/adlist.php" );
         ?>
     </div><br />
 -->
