@@ -164,9 +164,9 @@ else
     <div align="center">
         <?
         
-        $CategoryID = $ini->read_var( "eZAdMain", "DefaultCategory" );
-        $Limit = 1; 
-        include( "ezad/user/adlist.php" );
+//        $CategoryID = $ini->read_var( "eZAdMain", "DefaultCategory" );
+//        $Limit = 1; 
+//        include( "ezad/user/adlist.php" );
 
         ?>
     </div><br />
